<?xml version="1.0"?>
<package format="2">
  <name>kaist_drone_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Drone control and planning</description>

  <maintainer email="cy.jung@kaist.ac.kr">Calvin chanyoung Jung</maintainer>
  <author email="cy.jung@kaist.ac.kr">Calvin chanyoung Jung</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
